# Scalable-ML-Inference-Eks

./: .dockerignore  .gitignore  Dockerfile  README copy.md  README.md  deploy.sh  main.py  pyproject.toml  run.sh  test.py
app/: .dockerignore  Dockerfile  pyproject.toml  run.sh
deployment/: deployment.yaml  keda-scaledobject.yaml  service.yaml  serviceMonitor.yaml
eks-deployment/: deployment.yaml  keda-scaledobject.yaml  node-scale-job.yaml  service.yaml  serviceMonitor.yaml  time-slicing-config-all.yaml
eks-deployment/karpenter/: controller-policy.json  controller-trust-policy.json  karpenter.yaml  nodepool.yaml
kubernetes/: deployment.yaml  keda-scaledobject.yaml  serviceMonitor.yaml
local/: deployment.yaml
terraform/: cluster_autoscaler_iam.tf  outputs.tf  providers.tf  security_group_rules.tf  variables.tf  vpc.tf
terraform-deployment/: eks.tf  eks_access_management.tf  providers.tf  variables.tf  vpc.tf
