[project]
name = "scalable-deployment"
version = "0.1.0"
description = ""
authors = [
    {name = "FurkanAtass",email = "s.furkanatas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13,<0.116.0",
    "torch>=2.7.1,<3.0.0",
    "torchvision>=0.22.1,<0.23.0",
    "uvicorn>=0.34.3,<0.35.0",
    "python-multipart>=0.0.20,<0.0.21"
]

